--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="background"></div>
     <div class="resolucion">
         <div id="desktop">
             <header>
